--- a/index.html
+++ b/index.html
@@ -16,15 +16,85 @@
       }
       body {
         font-family: var(--font-sans);
+        transition: filter 0.3s ease;
       }
       h1, h2, h3, h4, h5, h6 {
         font-family: var(--font-heading);
       }
       /* Focus visible adjustment for accessibility */
       :focus-visible {
-        outline: 3px solid #166534;
+        outline: 4px solid #facc15; /* Yellow for better visibility */
         outline-offset: 2px;
+        border-radius: 2px;
       }
+
+      /* ACCESSIBILITY CLASSES */
+      
+      /* Grayscale */
+      html.a11y-grayscale {
+        filter: grayscale(100%);
+      }
+
+      /* High Contrast Mode */
+      html.a11y-high-contrast {
+        filter: contrast(120%);
+      }
+      html.a11y-high-contrast body {
+        background-color: #000 !important;
+        color: #fff !important;
+      }
+      html.a11y-high-contrast * {
+        border-color: #fff !important;
+      }
+      html.a11y-high-contrast .bg-stone-50, 
+      html.a11y-high-contrast .bg-white,
+      html.a11y-high-contrast .bg-stone-100 {
+        background-color: #000 !important;
+        color: #fff !important;
+      }
+      html.a11y-high-contrast .text-stone-600,
+      html.a11y-high-contrast .text-stone-500,
+      html.a11y-high-contrast .text-emerald-950,
+      html.a11y-high-contrast .text-emerald-900 {
+        color: #fff !important;
+      }
+      html.a11y-high-contrast h1, 
+      html.a11y-high-contrast h2, 
+      html.a11y-high-contrast h3 {
+        color: #facc15 !important; /* Yellow headings */
+      }
+      html.a11y-high-contrast button {
+        background-color: #facc15 !important;
+        color: #000 !important;
+        border: 2px solid #fff !important;
+      }
+
+      /* Readable Font (Dyslexia friendlyish) */
+      body.a11y-readable-font, 
+      body.a11y-readable-font h1,
+      body.a11y-readable-font h2,
+      body.a11y-readable-font h3,
+      body.a11y-readable-font p,
+      body.a11y-readable-font span {
+        font-family: Arial, Helvetica, sans-serif !important;
+        letter-spacing: 0.05em;
+        line-height: 1.8;
+        word-spacing: 0.1em;
+      }
+
+      /* Highlight Links */
+      body.a11y-links-highlight a,
+      body.a11y-links-highlight button {
+        text-decoration: underline !important;
+        text-decoration-thickness: 2px !important;
+        text-underline-offset: 4px;
+      }
+      body.a11y-links-highlight a:hover,
+      body.a11y-links-highlight button:hover {
+        background-color: #facc15 !important;
+        color: #000 !important;
+      }
+
     </style>
   <script type="importmap">
 {
